Setando novos params e novas rotas
